--- a/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="sb-dashboardWrapper" #adManagerAppAnchor *ngIf="!displayBusinessSetUp && businessFetched">
-        <app-ad-manager [fullScreenWindow]="false" #adManagerApp></app-ad-manager>
+        <app-ad-manager-menu [fullScreenWindow]="false" #adManagerApp></app-ad-manager-menu>
     </div>
     
 </div>
