--- a/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
+++ b/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
@@ -65,14 +65,14 @@
                     class="spotbie-input-info spotbie-text-gradient spotbie-error mt-4 mb-2">
         
                 <div *ngIf="f.businessCoinPercentage.errors.required">
-                    Point-to-Dollar Ratio %
+                    ENTER REWARD RATE %
                 </div>
                 
             </div> 
             
             <ng-template #percentage_normal>
                 <label class="spotbie-input-info spotbie-text-gradient mb-2">
-                    Point-to-Dollar Ratio %
+                    REWARD RATE %
                 </label>          
             </ng-template>
 
