--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
@@ -49,22 +49,22 @@
         <h5 class="spotbie-text-gradient text-center">Let user scan for reward.</h5>
 
         <ngx-qrcode [elementType]="qrType" 
-                    [value]="business.qr_code_link"
+                    [value]="redeemable.uuid"
                     [width]="qrWidth"
                     cssClass="spotbie-full-qrCode mt-4 mb-4"
                     colorDark="#000"
                     colorLight="#64e56f"
                     errorCorrectionLevel="H"></ngx-qrcode>
-    
+        
+        <p class="spotbie-text-gradient text-center text-uppercase mt-3">scan once per table</p>
+
         <p class="spotbie-text-gradient text-center mt-5 text-uppercase">
             Total Points<br/><span class='sb-text-light-green-gradient'>{{ loyaltyPointReward | number:'1.0':'en-US' }}</span>
         </p>
 
         <p class="spotbie-text-gradient text-center mt-5 text-uppercase">
             Dollar Value<br/><span class='sb-text-light-green-gradient'>{{ loyaltyPointRewardDollarValue | currency : 'USD' }}</span>
-        </p>
-
-        <p class="spotbie-text-gradient text-center text-uppercase mt-5">scan once per table</p>
+        </p>        
 
         <div class='spotbie-button text-uppercase mt-5 cursor-pointer' (click)="closeQr()">
             <span class='spotbie-text-gradient'>FINISH</span>
