--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
@@ -188,7 +188,7 @@
             <span class="spotbie-text-gradient">DELETE ME </span><i class='fa fa-trash'></i>
         </div>
 
-        <div class='mt-5 mb-5 cursor-pointer' (click)="closeThis()">
+        <div class='mt-5 mb-5 cursor-pointer' (click)="closeRewardCreator()">
             <span class="spotbie-text-gradient">CANCEL</span>
         </div>
 
