--- a/src/app/helpers/loading-helper/loading-screen/loading-screen.component.html
+++ b/src/app/helpers/loading-helper/loading-screen/loading-screen.component.html
@@ -1,3 +1,10 @@
 <div class='spotbie-loading-screen'>
-    <i class='spotbie-loading-gif fa fa-spinner fa-spin'></i>
+
+    <div class='spotbie-loading-wrapper'>
+       
+        <i class='spotbie-loading-gif fa fa-spinner fa-spin'></i>
+        <span class='spotbie-text-gradient'>{{ loadingText }}</span>
+        
+    </div>
+
 </div>
