--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.css
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.css
@@ -41,8 +41,8 @@
     background-repeat: no-repeat !important;
     background-size: contain !important;
     cursor: pointer; 
-    border-radius: 27px;
-    border: 1px solid #eee;
+    border-radius: 0px;
+    border: 1px solid #eeeeee70;
 }
 .spotbie-click-or-drag-upload{
     position: absolute;
@@ -53,7 +53,7 @@
     width: 100%;
     min-width: 100%;
     text-align: center;
-    background-color: #000000e0;
+    background-color: rgba(17, 15, 20, .82);
     font-size: 20px;
     letter-spacing: 4px;
 }
