--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
@@ -81,12 +81,16 @@
     text-align: right;
     font-size: .6rem;
 }
+
 #sign_up_general_instructions{
+    display: none;
+}
+.sb-signUpGeneralInstructions{
     margin: 0 auto;    
     max-width: 440px;    
     text-align: center;
     padding-bottom: 10px;
-    font-size: 13px;
+    font-size: .6rem;
     text-align: left;
 }
 .spotbie-loginWrapper{
