--- a/src/styles.css
+++ b/src/styles.css
@@ -113,6 +113,10 @@ textarea:active {
     color: #332f3e !important;
     font-size: 1.8rem !important;
 }
+.sb-material-dark .sb-icon{
+    color: white !important;
+    font-size: 1.8rem !important;
+}
 .sb-mainWrapper {
 
     position: relative;
@@ -323,9 +327,9 @@ a, a:hover, a:active, a:after{
     position: fixed;
     left: 0;
     text-align: center;
-    width: 99%;
-    min-width: 99%;
-    max-width: 99%;   
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;   
     top: 0;
     bottom: 0;
     margin: 0 auto;  
@@ -891,9 +895,12 @@ p.sb-helpInfo{
     }    
 }
 @media (max-width: 560px) {
+
+    .sb-material-dark .sb-icon,
     .sb-material-light .sb-icon{
         font-size: 1.4rem !important;
     }
+    
     .sb-mainWrapper{
         min-width: 90%;
         max-width: 90%
