--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
@@ -22,7 +22,7 @@
                 (click)="editReward(reward)">
 
             <h6 *ngIf="reward.type == '0'">
-                <span class="sb-text-light-green-gradient">
+                <span class="spotbie-text-gradient">
                     {{ reward.name }}
                 </span>
             </h6>
@@ -65,7 +65,7 @@
                 (click)="openReward(reward)">
 
             <h6 *ngIf="reward.type == '0'">
-                <span class="sb-text-light-green-gradient">
+                <span class="spotbie-text-gradient">
                     {{ reward.name }}
                 </span>
             </h6>
