--- a/src/app/spotbie/features/business-features/business-features.component.html
+++ b/src/app/spotbie/features/business-features/business-features.component.html
@@ -39,7 +39,7 @@
 
 <p class="mt-2 mb-2">
 
-    <!--<img class='sb-whiteIconBg' src='assets/images/home_imgs/spotbie-white-icon.svg' />-->
+    <img class='sb-whiteIconBg right' src='assets/images/qr/spotbie-white-icon.png' />-->
 
     Do you own a <b>place to eat</b>? 
     Let SpotBie help you find the best <b>customers around you</b>. 
@@ -68,7 +68,7 @@
 
 <p class="mt-2 mb-2">
 
-    <!--<img class='sb-whiteIconBg' src='assets/images/home_imgs/spotbie-white-icon.svg' />-->
+    <img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
 
     Are you looking for <b>people to attend your event</b>? 
     Let SpotBie help you find local and bored people to attend your event. 
@@ -94,7 +94,7 @@
 
 <p class="mt-2 mb-2">
 
-    <!--<img class='sb-whiteIconBg' src='assets/images/home_imgs/spotbie-white-icon.svg' />-->
+    <img class='sb-whiteIconBg right' src='assets/images/qr/spotbie-white-icon.png' />
 
     Bring more clients to your store by offering satisfying discounts. SpotBie Community members love to shop
     and spend. SpotBie helps you attract new and old clientele by giving them an extra reason why to visit your store.
