--- a/src/app/spotbie/features/user-features/user-features.component.html
+++ b/src/app/spotbie/features/user-features/user-features.component.html
@@ -3,15 +3,13 @@
 
 <h5 class="text-uppercase">CONNECTING USERS, PLACES TO EAT, SHOPPING, AND EVENTS.</h5>
 
-<button class="spotbie-button sb-getStarted" (click)="spawnCategories('food')">
+<div class="spotbie-button sb-getStarted" (click)="spawnCategories('food')">
     <span>GET STARTED</span>
-</button>
+</div>
 
 <img class="sb-logo-withStreet mt-4 mb-4" src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
 <h4 class="text-uppercase">SPOTBIE COMMUNITY</h4>
-
-<img class='sb-whiteIconBg right' src='assets/images/qr/spotbie-white-icon.png' />
 
 <p>    
 
