--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
@@ -1,16 +1,14 @@
 .spotbie-ad-wrapper-header{
     position: relative;
     text-align: center;
-    margin: 0 auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    min-height: 274px;
+    margin: 5px auto;
+    min-height: 500px;
     background-repeat: no-repeat!important;
     background-size: contain!important;
     background-position: center!important;
-    max-width: 63%;
-    min-width: 63%;
-    width: 63%;
+    max-width: 100%;
+    min-width: 100%;
+    width: 100%;
     background-color: #1c1924!important;
     cursor: pointer;
     z-index: 9;
@@ -91,17 +89,20 @@
     z-index: 0;
     pointer-events: none;   
 }
+
 .sb-ad-top{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 2;
 }
 .sb-ad-bottom{
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
+    z-index: 2;
 }
 
 @media (max-width: 1100px) { 
@@ -119,7 +120,9 @@
         max-width: 100%;
         min-width: 100%;
         width: 100%;
-        right: 0%;        
+        right: 0%;
+        min-height: unset;
+        height: unset;        
     }
     .spotbie-ad-image{
         position: relative;
