--- a/src/app/spotbie/ads/single-ad/single-ad.component.css
+++ b/src/app/spotbie/ads/single-ad/single-ad.component.css
@@ -67,14 +67,14 @@
     position: absolute;
     left: 0;
     right: 0;
-    margin: 0 auto;
+    margin-left: 0;
     min-height: 100%;
     height: 100%;
     max-height: 100%;
-    max-width: 50%;
-    background-repeat: no-repeat !important;
-    background-size: contain !important;
-    background-position: center !important;    
+    max-width: 74%;
+    background-repeat: no-repeat!important;
+    background-size: 100%!important;
+    background-position: center!important; 
 }
 .spotbie-white-iconImg{
     position: absolute;
