--- a/src/app/spotbie/community-member/community-member.component.html
+++ b/src/app/spotbie/community-member/community-member.component.html
@@ -1,1 +1,5 @@
-<app-info-object [info_object]="business" (closeWindow)="closeWindow()" *ngIf="infoObjectLoaded" [fullScreenMode]="fullScreenMode"></app-info-object>
+<app-info-object [info_object]="business" 
+                    [ad]="ad"
+                    (closeWindow)="closeWindow()" 
+                    *ngIf="infoObjectLoaded" 
+                    [fullScreenMode]="fullScreenMode"></app-info-object>
