Overlay window fix

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,10 @@
 .spotbie-main-holder{
-    z-index: 99;
+    z-index: 96;
     padding-top: 50px;
 }
-
+.spotbie-app-menu{
+    z-index: 99;
+}
 .spotbie-menu-page-padding-top-not-logged{
     padding-top: 76px;
     margin-top: env(safe-area-inset-top);
