--- a/src/app/business/business.component.html
+++ b/src/app/business/business.component.html
@@ -1,13 +1,12 @@
-<div class="spotbie-main-holder" id="spotbieMainHolder">
-
-    <app-map #app_map [business]="true" (signUpEvt)="signUp()"></app-map>
-    
-    <app-menu-logged-out #appMenuLoggedOut 
+<app-menu-logged-out #appMenuLoggedOut 
                         class="spotbie-app-menu" 
                         (myFavoritesEvt)="myFavorites()"
                         (spawnCategoriesOut)="spawnCategories($event)" 
-                        (openHome)="openHome()">
-    </app-menu-logged-out>
+                        (openHome)="openHome()"></app-menu-logged-out>
+
+<div class="spotbie-main-holder" id="spotbieMainHolder">
+
+    <app-map #app_map [business]="true" (signUpEvt)="signUp()"></app-map>
     
     <div class="spotbie-menu-page-padding-top-not-logged"></div>    
 
