--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
@@ -64,13 +64,13 @@
     position: absolute;
     left: 0;
     right: 0;
-    margin: 0 auto;
+    margin-left: 0;
     min-height: 100%;
     height: 100%;
     max-height: 100%;
-    max-width: 50%;
+    max-width: 85%;
     background-repeat: no-repeat !important;
-    background-size: contain !important;
+    background-size: cover !important;
     background-position: center !important;    
 }
 .spotbie-white-iconImg{
