--- a/src/app/spotbie/ads/single-ad/single-ad.component.html
+++ b/src/app/spotbie/ads/single-ad/single-ad.component.html
@@ -4,7 +4,7 @@
 
     <div class='sb-ad-top'>
 
-        <span class='sb-text-light-green-gradient sb-sponsored text-uppercase'>SPONSORED</span>
+        <span class='sb-text-light-green-gradient sb-sponsored text-uppercase' (click)="clickGoToSponsored()">SPONSORED</span>
 
         <span class='spotbie-text-gradient sb-sponsoredName text-uppercase'>{{ business.name }}</span>
 
