--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -3,7 +3,17 @@
     padding-top: 70px;
     background-color: #332f3e;
     padding-bottom: 100px;
-    z-index: 99;    
+    background: url(src/assets/images/home_imgs/spotbie-white-icon.svg);
+    background-size: cover !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-attachment: fixed;z-index: 90 !important;    
+}
+.communityMemberWindow{
+    background-color: rgb(16, 16, 16);
+}
+.infoObjectWindow{
+    background-color: white;
 }
 .spotbie-bgIconLogo{
     min-height: 100vh;
@@ -14,6 +24,7 @@
     background-repeat: no-repeat !important;
     background-size: cover !important;
     overflow:  hidden !important;
+    z-index: 0;
 }
 .spotbie-repost-title{
     position: relative;
@@ -83,21 +94,6 @@
     overflow: hidden;
     text-overflow: ellipsis;    
 }
-.spotbie-album-media-image-wrapper{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    min-height: 100%;
-    height: 100%;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    text-align: center;
-    z-index: -1;
-}
 .spotbie-album-media-image{
     position: relative;
     display: block;
@@ -106,19 +102,6 @@
     max-width: 650px;
     max-height: 550px;
     height: 550px;
-}
-.spotbie-album-media-image-wrapper{
-    position: fixed;
-    margin: 0 auto;
-    min-width: 100%;
-    width: 100%;
-    max-width: 100%;
-    min-height: 100%; 
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background-attachment: fixed !important;
-    text-align: center;
 }
 .spotbie-album-media-image-blur{
     position: absolute;
@@ -135,20 +118,26 @@
     z-index: -1;
 }
 .spotbie-info-object-image{
-    position: fixed;
+    position: absolute ;
     top: 0;
     left: 0;
+    bottom: 0;
+    margin: 0 auto;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%; 
+
+    z-index: -1;       
+}
+.spotbie-info-object-image.communityMember{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
     margin: 0 auto;
     width: 100%;
     min-width: 100%;
     max-width: 100%;
-    height: 100vh;
-    min-height: 100vh;
-    background-size: cover !important;
-    background-position: center !important;
-    background-repeat: no-repeat !important;
-    z-index: -1;
-    pointer-events: none;    
 }
 .spotbie-toast-message{
     position: fixed;
@@ -196,7 +185,7 @@
     position: relative;
     margin: 0 auto;
     font-size: 25px;
-    margin-top: 130px;
+    margin-top: 90px;
     margin-bottom: 25px;
 }
 .spotbie-info-object-title.fullScreenMode{
@@ -292,23 +281,18 @@
 .spotbie-add-to-favorites{
     position: relative;
     cursor: pointer;
-    max-width: 150px;
+    max-width: 185px;
     border-radius: 20px !important;
     padding-top: 10px !important;
     padding-bottom: 10px !important;
     background: linear-gradient(90deg,#64e56f,#35a99f);
     color: #1b1a1e !important;
-    z-index: 99;
     font-size: .8rem;
 }
 .spotbie-info-object-open {
     margin-top: 30px;
     font-size: 16px;
     font-weight: bold;
-}
-.spotbie-album-media-image-wrapper{
-    padding-bottom: 40px;
-    overflow-y: scroll !important;
 }
 .sb-miniLogoIcon, h1{
     display: inline-block;
@@ -422,11 +406,6 @@ h6.sb-titleGreen{
     }
     .spotbie-share-post-link{
         margin-bottom: 20px !important;
-    }
-    .spotbie-album-media-image-wrapper{
-        padding-top: env(safe-area-inset-top, 20px);
-        background-attachment: scroll !important;   
-        padding-bottom: 50px !important;
     }
     .sb-input{
         width: 92%;
