--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.html
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.html
@@ -10,6 +10,10 @@
 
         <span class='sb-text-light-green-gradient sb-totalRewards text-uppercase'>{{ totalRewards  }} REWARDS</span>
 
+        <span class='sb-text-light-green-gradient sb-perDollarTopAd text-uppercase' *ngIf="!isMobile">
+            {{ (business.loyalty_point_dollar_percent_value / 100) | currency : 'USD' }} per dollar
+        </span>
+
     </div>
 
     <div class='spotbie-white-iconImg' [ngStyle]="{'background' : 'url(' + whiteIconSvg + ')'}" ></div>
@@ -20,11 +24,13 @@
         
         <span class='sb-text-light-green-gradient sb-distanceMiles text-uppercase'>{{ distance | number:'1.0':'en-US' }} miles.</span>
 
-        <span class='sb-text-light-green-gradient sb-perDollar text-uppercase'>{{ (business.loyalty_point_dollar_percent_value / 100) | currency : 'USD' }} per dollar</span>
+        <span class='sb-text-light-green-gradient sb-perDollar text-uppercase' *ngIf="isMobile">
+            {{ (business.loyalty_point_dollar_percent_value / 100) | currency : 'USD' }} per dollar
+        </span>
 
         <span class='spotbie-text-gradient sb-address text-uppercase'><i class='fas fa-map-marker-alt'></i> {{ business.address }}</span>
 
-        <span class='spotbie-text-gradient sb-categoryList text-uppercase'>{{ categoriesListFriendly }}</span>
+        <span class='spotbie-text-gradient sb-categoryList text-uppercase'>{{ categoryListForUi }}</span>
 
     </div>
 
