--- a/src/app/spotbie/ads/single-ad/single-ad.component.css
+++ b/src/app/spotbie/ads/single-ad/single-ad.component.css
@@ -56,7 +56,7 @@
 }
 .sb-categoryList{
     position: absolute;
-    bottom: 91px;
+    bottom: 10px;
     right: 14px;
     font-size: .5rem;
 }
@@ -103,6 +103,12 @@
     bottom: 0;
     left: 0;
     width: 100%;
+}
+.sb-perDollarTopAd{
+    position: absolute;
+    top: 120px;
+    right: 14px;
+    font-size: 1rem;
 }
 
 @media (max-width: 1100px) { 
